fix: widget z-index

--- a/style.css
+++ b/style.css
@@ -912,7 +912,7 @@ main {
 
 footer {
   position: relative;
-  z-index: 0;
+  z-index: 1;
 }
 
 .footnav {
